--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,9 +44,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools 
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-          pip install .
+          python -m pip install --upgrade pip setuptools  --no-cache-dir
+          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt  --no-cache-dir; fi
+          pip install . --no-cache-dir
       - name: Test with pytest
         run: |
           pytest braintools/
@@ -73,8 +73,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          python -m pip install --upgrade pip setuptools --no-cache-dir
+          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt  --no-cache-dir; fi
           pip install .
       - name: Test with pytest
         run: |
@@ -102,9 +102,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools
-          python -m pip install -r requirements-dev.txt
-          pip install .
+          python -m pip install --upgrade pip setuptools --no-cache-dir
+          python -m pip install -r requirements-dev.txt  --no-cache-dir
+          pip install .  --no-cache-dir
       - name: Test with pytest
         run: |
           pytest braintools/ -p no:faulthandler
