--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,8 +44,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          python -m pip cache purge
           python -m pip install --upgrade pip setuptools  --no-cache-dir
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt  --no-cache-dir; fi
+          python -m pip install -r requirements-dev.txt  --no-cache-dir
           pip install . --no-cache-dir
       - name: Test with pytest
         run: |
@@ -73,8 +74,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          python -m pip cache purge
           python -m pip install --upgrade pip setuptools --no-cache-dir
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt  --no-cache-dir; fi
+          python -m pip install -r requirements-dev.txt  --no-cache-dir
           pip install .
       - name: Test with pytest
         run: |
@@ -102,6 +104,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          python -m pip cache purge
           python -m pip install --upgrade pip setuptools --no-cache-dir
           python -m pip install -r requirements-dev.txt  --no-cache-dir
           pip install .  --no-cache-dir
