--- a/.github/workflows/CI-daily.yml
+++ b/.github/workflows/CI-daily.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           python -m pip cache purge
           python -m pip install --upgrade pip setuptools
-          python -m pip install -r requirements-cpu.txt
+          python -m pip install -r requirements-dev.txt
           if [ "${{ matrix.jax-version }}" == "" ]; then
             python -m pip install jax || exit 1
           else
