Add `quad` module, parameter transformations, and spike operations (#30)
* bump version to 0.0.9 and change plot rendering from line to scatter

* Refactor load_matfile function signature and clean up checkpoint handling

* [feat] Implement transformation classes for parameter mapping and constraints

* Refactor __init__.py to include transformation module in __all__ exports

* [tests] Add unit tests for load_matfile function to validate data handling

* [feat] Add new transformation classes: LogTransform, ExpTransform, TanhTransform, and SoftsignTransform

* [feat] Add bitwise operations for spike tensors: OR, AND, IAND, NOT, XOR, IXOR

* [fix] Update Read the Docs configuration for Ubuntu and Python versions; change author name in setup.py

* [fix] Update NegSoftplusTransform forward and inverse methods for accuracy; add unit tests for various transforms

* [fix] Adjust clipping parameters in SoftsignTransform and update tolerance in inverse test for improved accuracy

* [feat] Add spike bitwise operations and update module exports

* [feat] Implement ODE and SDE integrators with unit tests; update module exports

* [feat] Add documentation for ODE and SDE numerical integrators in quad module

* [fix] Bump version to 0.0.10 for upcoming release

* [refactor] Update ODE and SDE integrator tests to use braintools for step functions

--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -1,17 +1,92 @@
 name: Publish to PyPI.org
+
 on:
   release:
     types: [published]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
-  pypi:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-      - run: python setup.py bdist_wheel --python-tag=py3
-      - name: Publish package
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+
+      - name: Install build tooling
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
+
+      - name: Verify tag matches version
+        if: github.event_name == 'release'
+        shell: bash
+        run: |
+          TAG="${{ github.event.release.tag_name }}"
+          PKG_VERSION=$(python - <<'PY'
+          import re, pathlib
+          init = pathlib.Path('brainstate/__init__.py').read_text(encoding='utf-8')
+          m = re.search(r"__version__\s*=\s*['\"]([^'\"]+)['\"]", init)
+          print(m.group(1))
+          PY
+          )
+          echo "Package version: $PKG_VERSION"
+          echo "Tag: $TAG"
+          if [[ "$TAG" != "v$PKG_VERSION" && "$TAG" != "$PKG_VERSION" ]]; then
+            echo "Release tag must match package version" >&2; exit 1; fi
+
+      - name: Build sdist and wheel
+        run: python -m build --sdist --wheel --outdir dist
+
+      - name: Check distribution metadata
+        run: twine check dist/*
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/*
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/project/brainstate
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
+
+      - name: Publish to PyPI
+        if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'release' && !github.event.release.prerelease) }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
+          packages-dir: dist
           password: ${{ secrets.PYPI_API_TOKEN }}
+          skip-existing: true
+
+      - name: Publish to TestPyPI (for prereleases)
+        if: ${{ github.event_name == 'release' && github.event.release.prerelease }}
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: dist
+          repository-url: https://test.pypi.org/legacy/
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          skip-existing: true
