Update changelog, enhance README with citation info, and refine spike encoding tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,4 @@ cython_debug/
 /examples/dynamics_simulation/Joglekar_2018_data/
 /docs/apis/deprecated/generated/
 /.claude/
+/docs/apis/changelog.md
