--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy
-jax
-jaxlib
-brainunit
-brainstate
-matplotlib
+numpy>=1.15
+brainstate>=0.1.0
+brainunit>=0.0.8
 typing_extensions
+jax
+matplotlib
+msgpack
