--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,20 +1,25 @@
-# .readthedocs.yml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
-# Required
 version: 2
 
 build:
-  os: "ubuntu-24.04"
+  os: ubuntu-24.04
   tools:
-    python: "3.13"
+    python: "3.12"
 
-# Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
+  fail_on_warning: true
 
-# Optionally set the version of Python and requirements required to build your docs
+#formats:
+#  - htmlzip
+#  - pdf
+#  - epub
+
 python:
   install:
     - requirements: requirements-doc.txt
+    - method: pip
+      path: .
+  system_packages: false
+
+submodules:
+  include: false
