--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,25 +20,25 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-          cache: pip
-      - name: Install pre-commit
-        run: |
-          python -m pip install --upgrade pip
-          pip install pre-commit
-      - name: Run pre-commit
-        run: pre-commit run --all-files --show-diff-on-failure --color always
+#  lint:
+#    name: Lint
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: '3.12'
+#          cache: pip
+#      - name: Install pre-commit
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install pre-commit
+#      - name: Run pre-commit
+#        run: pre-commit run --all-files --show-diff-on-failure --color always
 
   tests:
     name: Tests (${{ matrix.os }} / py${{ matrix.python }})
-    needs: lint
+#    needs: lint
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
