Introduce comprehensive Optax optimizers and LR schedulers (#50)
* Refactor optimizer classes to remove base class dependency and enhance structure

* Rename optimization tutorials for clarity and consistency in naming

* Enhance learning rate scheduler implementation and add new classes

* Rename tutorial files for improved clarity and consistency

* Refactor _optax_optimizer.py for improved readability and consistency in super() calls

* Rename lr_scheduler files to optax_lr_scheduler for improved clarity and consistency

* Refactor optimizer and state management: integrate UniqueStateManager for handling unique State objects and enhance parameter group functionality

* Refactor optimizer: enhance learning rate handling with LongTermState and improve parameter group management

* Refactor LRScheduler and OptaxOptimizer: support base learning rates as either floats or LRScheduler instances, enhancing flexibility in learning rate management

* Update pyproject.toml: add typing_extensions and remove nevergrad from dependencies for improved compatibility

* Refactor optimizer and scheduler integration: improve type handling for OptaxOptimizer and LRScheduler, enhancing code clarity and consistency

* Refactor parameter group serialization: streamline the preparation of serializable groups by simplifying the mapping logic and removing unnecessary keys

* Refactor UniqueStateManager initialization: add optional pytree parameter to support immediate uniqueness processing

* Add step_epoch method to LRScheduler for epoch-based updates

* Refactor learning rate handling: unify lr initialization with ConstantLR for improved consistency and clarity

* Refactor optimizer learning rate handling: unify base_lr access and integrate LRScheduler for improved consistency

* Refactor PyTree reconstruction and state update methods: improve readability by formatting method signatures

* Update installation instructions and enhance .mat file loading: add CUDA 13 support and improve rea

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
     "numpy>=1.15",
     "brainstate>=0.1.0",
     "brainunit>=0.0.8",
-    "typing_extensions"
+    "typing_extensions",
+    "optax",
 ]
 
 [project.optional-dependencies]
@@ -51,35 +52,50 @@ testing = [
     "nevergrad",
     "scipy",
     "msgpack",
+    "optax",
     "pytest",
-    "absl-py"
+    "absl-py",
+    "typing_extensions",
 ]
 cpu = [
     "jax[cpu]",
     "brainstate",
     "brainunit",
     "matplotlib",
-    "nevergrad",
     "scipy",
-    "msgpack"
+    "msgpack",
+    "optax",
+    "typing_extensions",
 ]
 cuda12 = [
     "jax[cuda12]",
     "brainstate",
     "brainunit",
     "matplotlib",
-    "nevergrad",
     "scipy",
-    "msgpack"
+    "msgpack",
+    "optax",
+    "typing_extensions",
+]
+cuda13 = [
+    "jax[cuda13]",
+    "brainstate",
+    "brainunit",
+    "matplotlib",
+    "scipy",
+    "msgpack",
+    "optax",
+    "typing_extensions",
 ]
 tpu = [
     "jax[tpu]",
     "brainstate",
     "brainunit",
     "matplotlib",
-    "nevergrad",
     "scipy",
-    "msgpack"
+    "msgpack",
+    "optax",
+    "typing_extensions",
 ]
 
 [project.urls]
